--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Gisto
 gisto_version: 0.2.1b
 gisto_old_version: 0.2.0a
 gisto_build_date: 2013-09-10
-download_url: http://download.gistoapp.com
+download_url: http://mirror.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
 prev_versions: 0.2.0b,0.1.3a,0.1.2a
 pygments: true
