--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,14 @@
 name: Gisto
 url: http://gistoapp.com
-gisto_build_date: 2013-09-10
+gisto_build_date: 2014-03-20
 download_url: http://download.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
 pygments: true
 
 releases:
+ - version: 0.2.4b
+ - version: 0.2.3b
+ - version: 0.2.2b
  - version: 0.2.1b
  - version: 0.2.0b
  - version: 0.1.3a
