Fix mobile. Fix CSS. Made header fixed.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ url: http://gistoapp.com
 gisto_build_date: 2014-03-20
 download_url: http://download.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
+year: 2014
 pygments: true
 
 releases:
@@ -25,3 +26,15 @@ navigation:
   url: /faq/
 - text: Downloads
   url: /download/
+
+contributers:
+- name: Maayan Glikser
+  gravatar: https://secure.gravatar.com/avatar/3a615b34ef2060face8fcd481c6377e1?s=80
+  site: www.glikm.com
+  twitter_name: MaayanGlikser
+  description: Software developer based in Israel
+- name: Sasha Khamkov
+  gravatar: https://secure.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=80
+  site: www.sanusart.com
+  twitter_name: sanusart
+  description: Sasha is web developer
