Changed texts to be more clear, updated outdated information

--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ contributers:
   gravatar: https://secure.gravatar.com/avatar/3a615b34ef2060face8fcd481c6377e1?s=80
   site: www.glikm.com
   twitter_name: MaayanGlikser
-  description: Software developer based in Israel
+  description: Software Developer
 - name: Sasha Khamkov
   gravatar: https://secure.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=80
   site: www.sanusart.com
   twitter_name: sanusart
-  description: Sasha is web developer
+  description: Web Developer
