FEATURE (sitemap): add jekyll-sitemap
- add jekyll sitemap as of https://github.com/blog/1833-github-pages-3
- change "pygments" to "highlighter"

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,11 @@ gisto_build_date: 2014-03-20
 download_url: http://download.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
 year: 2014
-pygments: true
+highlighter: true
 markdown: kramdown
+
+gems:
+  - jekyll-sitemap
 
 releases:
  - version: 0.2.4b
