--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Gisto
 url: http://gistoapp.com
-gisto_build_date: 2014-06-10
+gisto_build_date: 2014-06-29
 download_url: http://download.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
 year: 2014
@@ -11,6 +11,7 @@ gems:
   - jekyll-sitemap
 
 releases:
+ - version: 0.2.6b
  - version: 0.2.5b
  - version: 0.2.4b
  - version: 0.2.3b
