--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gisoapp.com",
+  "name": "gistoapp.com",
   "private": true,
   "version": "1.2.0",
   "description": "gisoapp.com - Gisto web pages",
@@ -13,7 +13,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^0.5.1",
     "gulp-minify-html": "^1.0.0",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^0.7.3",
     "gulp-uglify": "^1.1.0"
   },
   "engines": {
