Small UI fixes + gulp fixes (need to run `npm install`)

--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,7 @@ src/fonts/fontawesome-webfont.ttf
 src/fonts/fontawesome-webfont.woff
 src/fonts/fontawesome-webfont.woff2
 src/css/style.css
+src/css/gisto.css
 src/fonts/FontAwesome.otf
 src/js/script.js
+
