--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "jquery": "~2.1.3",
     "font-awesome": "~4.3.0",
     "kineticjs": "~5.1.0",
-    "kinetic": "~0.9.0"
+    "kinetic": "~0.9.0",
+    "enjoyhint": "~3.1.0"
   }
 }
