--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "description": "gisoapp.com - Gisto web pages",
   "devDependencies": {
     "bower": "^1.3.12",
-    "browser-sync": "^1.5.7",
+    "browser-sync": "^2.3.1",
     "del": "^1.1.1",
-    "gulp": "^3.8.8",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "1.0.0",
     "gulp-concat": "^2.5.2",
+    "gulp-if": "^1.2.5",
+    "gulp-inline-source": "^1.2.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-minify-html": "^1.0.0",
     "gulp-sass": "^0.7.3",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "yargs": "^3.6.0"
   },
   "engines": {
     "node": ">0.10.0"
