--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-inline-source": "^1.2.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-minify-html": "^1.0.0",
+    "gulp-minify-inline-scripts": "0.0.4",
     "gulp-sass": "^0.7.3",
     "gulp-uglify": "^1.1.0",
     "yargs": "^3.6.0"
