--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 name: Gisto
 url: http://gistoapp.com
 gisto_build_date: 2015-31-05
-download_url: http://download.gistoapp.com
+download_url: http://mirror.gistoapp.com
 download_url_mirror: http://mirror.gistoapp.com
 nightly_url: http://build.gistoapp.com
 
