--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^2.3.1",
-    "del": "^1.1.1",
+    "del": "^2.2.0",
+    "graceful-fs": "^4.1.4",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "1.0.0",
+    "gulp-autoprefixer": "3.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-if": "^1.2.5",
-    "gulp-inline-source": "^1.2.0",
-    "gulp-minify-css": "^0.5.1",
+    "gulp-if": "^2.0.1",
+    "gulp-inline-source": "^2.1.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.0",
-    "gulp-minify-inline-scripts": "0.0.4",
-    "gulp-sass": "^0.7.3",
+    "gulp-minify-inline-scripts": "0.0.6",
+    "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.1.0",
-    "yargs": "^3.6.0"
+    "node-sass": "^3.7.0",
+    "yargs": "^4.7.0"
   },
   "engines": {
     "node": ">0.10.0"
