--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "version": "1.2.0",
   "description": "gisoapp.com - Gisto web pages",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "browser-sync": "^2.3.1",
+    "bower": "^1.8.4",
+    "browser-sync": "^2.24.4",
     "del": "^2.2.0",
     "graceful-fs": "^4.1.4",
-    "gulp": "^3.8.11",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-if": "^2.0.1",
-    "gulp-inline-source": "^2.1.0",
+    "gulp-inline-source": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.0",
     "gulp-minify-inline-scripts": "0.0.6",
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.1.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^4.6.1",
     "yargs": "^4.7.0"
   },
   "engines": {
